@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2011-6-7
+GNU C Library NEWS -- history of user-visible changes.  2011-6-9
 Copyright (C) 1992-2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -6,6 +6,9 @@ Please send GNU C library bug reports via <http://sources.redhat.com/bugzilla/>
 using `glibc' in the "product" field.
 
 Version 2.15
+
+* New program pldd to list loaded object of a process
+  Implemented by Ulrich Drepper.
 
 Version 2.14
 
